--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     background-color: var(--bg-color);
     color: var(--term-color);
     font-family: 'Courier New', Courier, monospace;
+    cursor: default;
 }
 
 .terminal p {
@@ -65,6 +66,7 @@ body {
 
 .terminal-link:hover{
     color: var(--prompt-color);
+    cursor: crosshair;
 }
 
 .vim-bar #vim-bar-1 {
@@ -94,8 +96,8 @@ body {
 
 .vim-bar{
     position: fixed;
-min-width: 100%;
-bottom: 0;
-margin: 0;
+    min-width: 100%;
+    bottom: 0;
+    margin: 0;
 }
 
